# audiobookshelf-portal

./: .env.example  .gitignore  DEPLOYMENT.md  LICENSE  README.md  ROADMAP.md  compose.phase4-lab.yml  docker-compose.yml  task_plan.md
backend/: .dockerignore  .gitignore  Dockerfile  PHASE4_LAB.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260717_0001_phase4_lab_baseline.py  20260717_0002_tg_lifecycle.py  20260717_0003_tg_community_rewards.py  20260717_0004_media_request_slots.py
backend/app/: abs_client.py  auth_deps.py  config.py  db.py  db_migrations.py  internal_auth.py  logging_config.py  main.py  maintenance.py  models.py  observability.py  rate_limit.py  scheduler.py  security.py  session_cookie.py  settings_schema.py  worker.py  worker_health.py
backend/app/routers/: admin_bootstrap.py  admin_codes.py  admin_operations.py  admin_settings.py  admin_users.py  auth.py  internal_tg.py  internal_tg_admin.py  internal_tg_features.py  library.py  me.py  public.py  user_features.py
backend/app/services/: account_lifecycle.py  account_state.py  (+23 more)
backend/audiobookshelf_portal_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_abs_client.py  test_abs_client_pool.py  test_abs_search.py  test_account_state_service.py  test_admin_bootstrap_api.py  test_admin_codes_api.py  test_admin_library_browse_api.py  test_admin_users_api.py  test_announcement_settings.py  test_auth_api.py  test_auth_hardening.py  test_bootstrap_hardening.py  test_codes.py  test_community.py  test_data_retention.py  test_db_migrations.py  test_db_runtime.py  test_expiry_service.py  test_health.py  test_immediate_expiry_revoke.py  test_inactivity_service.py  test_internal_tg_api.py  test_library_access_control.py  test_login_rate_limit.py  test_me_api.py  test_models.py  test_observability.py  test_p1_admin_safety.py  test_p1_operations.py  test_p2_operations.py  test_public.py  test_reconciliation.py  test_rewards_and_referrals.py  test_scheduler.py  test_security.py  test_session_revocation.py  test_settings_api.py  test_settings_validation.py  test_sqlite_concurrency.py  test_telegram_binding_service.py  (+3 more)
bot/: .dockerignore  Dockerfile  pyproject.toml
bot/app/: admin_handlers.py  community.py  config.py  handlers.py  health.py  internal_api.py  logging_config.py  main.py  notifications.py  runtime.py  user_handlers.py
bot/moyin_telegram_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
bot/tests/: test_bot_safety.py  test_handlers.py
(+61 files in other folders)
