[project]
name = "audiobookshelf-portal-backend"
version = "0.1.0"
description = "Self-service portal backend for Audiobookshelf"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.6",
  "sqlmodel>=0.0.22",
  "httpx>=0.27",
  "passlib[bcrypt]>=1.7.4",
  "PyJWT>=2.9",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "anyio>=4.6",
  "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
