[project]
name = "moyin-telegram-bot"
version = "0.1.0"
description = "Telegram bot for MoYin.CC Audiobookshelf portal"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot>=22",
  "httpx>=0.27",
  "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
