[project]
name = "moyin-telegram-bot"
version = "0.1.0"
description = "Telegram bot for MoYin.CC Audiobookshelf portal"
requires-python = ">=3.11"
dependencies = [
  "python-telegram-bot>=22",
  "httpx>=0.27",
  "pydantic-settings>=2.6",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.8",
  "pip-audit>=2.9",
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.12",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["error::DeprecationWarning"]
